update logo size and header

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <header class="topbar">
   <div class="brand">
-    <img src="assets/img/logo.png" alt="BayShasta logo">
-    <span>BayShasta</span>
+    <img src="assets/img/logo.png" alt="BayShasta logo" style="height: 80px; width: auto;">
+    <span>BayShasta test123</span>
   </div>
 
   <nav class="nav">
@@ -29,15 +29,14 @@
 
 
 
-<section class="hero" id="home">
-
-  <p class="tagline">
-    BayShasta was born where the restless rhythm of the Bay Area meets the quiet power of Mount Shasta. BayShasta is built on the idea that what we consume, create, and share should carry intention. It’s the space between early-morning drives, fog over the bridges, long days of work, and the pull toward something deeper and more meaningful. Built from lived experience, BayShasta reflects a journey of discipline, curiosity, and inner growth—where hustle is balanced with stillness. It represents community, culture, movement, and mindful living. BayShasta is built for people who work hard, think deeply, and value growth beyond money alone. Every product, post, and idea shared here carries lived experience and intention. BayShasta isn’t rushed—it’s built with patience, honesty, and respect for the process. 
-  </p>
-  <a class="cta" href="mailto:contact@bayshasta.com">Contact</a>
-</section>
 <!-- STEP 4: Current Products -->
 <section class="section" id="products">
+
+  <div class="container">
+    BayShasta operates as an integrated ecosystem combining organic products, business services, and growth platforms. We produce fresh orange-based items—powders, juices, and natural blends. Our focus extends beyond products to people: local subscription deliveries, personalized orders, and community-driven partnerships. BayShasta also supports growth through business diagnostics, advertising, and advisory services, helping ideas evolve into sustainable ventures. BayShasta is designed to grow responsibly—expanding across products, services, and communities while staying rooted in authenticity and quality
+  </div>
+</section>
+
   <h2>Current Products</h2>
   <p class="muted">Small-batch. Bay Area energy. Updated weekly.</p>
 
