clean logo sizing

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 
 <header class="topbar">
   <div class="brand">
-    <img src="assets/img/logo.png" alt="BayShasta logo" style="height: 80px; width: auto;">
-    <span>BayShasta test123</span>
+    <img src="assets/img/logo.png" alt="BayShasta logo"><span> BayShasta </span>
   </div>
 
   <nav class="nav">
