fix product grid + images

--- a/index.html
+++ b/index.html
@@ -37,29 +37,35 @@
 </section>
 
   <h2>Current Products</h2>
-  <p class="muted">Small-batch. Bay Area energy. Updated weekly.</p>
+<p class="muted">Small-batch. Bay Area energy. Updated weekly.</p>
 
-  <div class="grid">
-    <div class="card">
-      <h3>Orange Peel Powder</h3>
-      <p>Bright citrus boost for tea, smoothies, and cooking.</p>
-      <p class="meta">Status: <strong>Available</strong></p>
-      <a class="cta" href="mailto:contact@bayshasta.com?subject=Order%20Orange%20Peel%20Powder">Order</a>
-    </div>
+<div class="grid">
+  <div class="card">
+    <img src="assets/img/orange-powder.jpg" alt="Orange Peel Powder">
+    <h3>Orange Peel Powder</h3>
+    <p>Bright citrus boost for tea, smoothies, and cooking.</p>
+    <p>Status: Available</p>
+    <a href="#" class="cta">Order</a>
+  </div>
 
-    <div class="card">
-      <h3>Orange Herbal Tea</h3>
-      <p>Clean aroma + calm sip. Easy daily ritual.</p>
-      <p class="meta">Status: <strong>Limited</strong></p>
-      <a class="cta" href="mailto:contact@bayshasta.com?subject=Order%20Orange%20Herbal%20Tea">Order</a>
-    </div>
+  <div class="card">
+    <img src="assets/img/orange-tea.jpg" alt="Orange Herbal Tea">
+    <h3>Orange Herbal Tea</h3>
+    <p>Clean aroma + calm sip. Easy daily ritual.</p>
+    <p>Status: Limited</p>
+    <a href="#" class="cta">Order</a>
+  </div>
 
-    <div class="card">
-      <h3>BayShasta Merch</h3>
-      <p>T-shirts, caps, and limited drops.</p>
-      <p class="meta">Status: <strong>Coming soon</strong></p>
-      <a class="cta" href="mailto:contact@bayshasta.com?subject=Merch%20Request">Request</a>
-    </div>
+  <div class="card">
+    <img src="assets/img/merch.jpg" alt="BayShasta Merch">
+    <h3>BayShasta Merch</h3>
+    <p>T-shirts, caps, and limited drops.</p>
+    <p>Status: Coming soon</p>
+    <a href="#" class="cta">Request</a>
+  </div>
+</div>
+
+
   </div>
 </section>
 
