--- a/products.html
+++ b/products.html
@@ -21,24 +21,27 @@
     </nav>
 
     <a class="cart-link" href="cart.html">Cart (<span id="cartCount">0</span>)</a>
-
   </header>
 
   <main class="section">
     <h1>Products</h1>
     <p class="muted">Pick a product line. Then choose your product.</p>
 
+    <!-- TOP PRODUCT LINE BUTTONS -->
     <div class="grid" id="categoryGrid"></div>
 
     <hr class="divider" />
 
+    <!-- LEFT SIDE LIST -->
     <h2 id="categoryTitle">Select a product line</h2>
     <div class="grid" id="productGrid"></div>
   </main>
 
+  <!-- ORDER MATTERS -->
   <script src="assets/js/products.js"></script>
   <script src="assets/js/cart.js"></script>
   <script src="assets/js/products-page.js"></script>
- 
 </body>
 </html>
+
+
