--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BayShasta</title>
   <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
  
 </head>
@@ -45,7 +46,8 @@
     <h3>Orange Peel Powder</h3>
     <p>Bright citrus boost for tea, smoothies, and cooking.</p>
     <p>Status: Available</p>
-    <a href="#" class="cta">Order</a>
+    <a class="btn" href="products.html#orange-peel-powder">Order</a>
+
   </div>
 
   <div class="card">
@@ -53,7 +55,7 @@
     <h3>Orange Herbal Tea</h3>
     <p>Clean aroma + calm sip. Easy daily ritual.</p>
     <p>Status: Limited</p>
-    <a href="#" class="cta">Order</a>
+    <a class="btn" href="products.html#orange-herbal-tea">Order</a>
   </div>
 
   <div class="card">
@@ -61,7 +63,7 @@
     <h3>BayShasta Merch</h3>
     <p>T-shirts, caps, and limited drops.</p>
     <p>Status: Coming soon</p>
-    <a href="#" class="cta">Request</a>
+    <a class="btn" href="products.html#bayshasta-merch">Request</a>
   </div>
 </div>
 
