Fixed checkout summary, email submit, and dark styling

--- a/cart.html
+++ b/cart.html
@@ -38,7 +38,8 @@
       <span id="cartTotal">$0.00</span>
     </div>
 
-    <button class="btn checkout-btn">Checkout</button>
+   <a class="btn checkout" href="checkout.html">Checkout</a>
+
   </div>
 </main>
 
