--- a/checkout.html
+++ b/checkout.html
@@ -5,65 +5,159 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Checkout | BayShasta</title>
   <link rel="stylesheet" href="style.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- Dark overlay + checkout layout (only affects checkout page) -->
+  <style>
+    body.checkout-page::before{
+      content:"";
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,0.55);
+      pointer-events: none;
+      z-index: -1;
+    }
+
+    .checkout-wrap { max-width: 1100px; margin: 24px auto; padding: 0 16px; }
+    .checkout-grid { display: grid; grid-template-columns: 1.2fr .8fr; gap: 18px; }
+
+    /* Use your existing “card” look if you already have it; if not, this ensures dark glass */
+    .checkout-card{
+      background: rgba(0,0,0,0.40);
+      border: 1px solid rgba(255,255,255,0.15);
+      border-radius: 14px;
+      padding: 16px;
+      backdrop-filter: blur(10px);
+    }
+
+    .row { display:flex; gap:10px; }
+    .row > div { flex:1; }
+
+    label { display:block; margin: 10px 0 6px; font-size: 14px; opacity: .9; }
+    input, select, textarea{
+      width: 100%;
+      padding: 10px 12px;
+      border-radius: 10px;
+      border: 1px solid rgba(255,255,255,0.18);
+      background: rgba(0,0,0,0.30);
+      color: #fff;
+    }
+    textarea{ min-height: 90px; resize: vertical; }
+
+    .items { display:flex; flex-direction: column; gap: 10px; margin-top: 10px; }
+    .item { display:flex; justify-content: space-between; gap: 10px; border-bottom: 1px solid rgba(255,255,255,0.12); padding-bottom: 10px; }
+    .item:last-child{ border-bottom:none; padding-bottom:0; }
+    .item-name{ font-weight: 800; }
+    .item-right{ font-weight: 900; }
+
+    .totals { margin-top: 12px; border-top: 1px solid rgba(255,255,255,0.15); padding-top: 12px; }
+    .totals > div { display:flex; justify-content: space-between; margin: 6px 0; }
+    .grand { margin-top: 10px; font-size: 18px; }
+
+    .actions { display:flex; gap:10px; margin-top: 14px; }
+
+    @media (max-width: 900px){
+      .checkout-grid{ grid-template-columns: 1fr; }
+    }
+  </style>
 </head>
-<body>
-  <header class="topbar">
-    <div class="brand">
-      <img src="assets/img/logo.png" alt="BayShasta logo" class="logo" />
-      <span>BayShasta</span>
-      Total: $<span id="checkoutTotal">0.00</span>
 
-    </div>
+<body class="checkout-page">
 
-    <nav class="nav">
-      <a href="index.html">Home</a>
-      <a href="products.html">Products</a>
-      <a class="active" href="checkout.html">Checkout</a>
-    </nav>
+<header class="topbar">
+  <div class="brand">
+    <img src="assets/img/logo.png" alt="BayShasta logo" class="logo" />
+    <span>BayShasta</span>
+  </div>
 
-    <a class="cart-link" href="cart.html">Cart (<span id="cartCount">0</span>)</a>
-  </header>
+  <nav class="nav">
+    <a href="index.html">Home</a>
+    <a href="products.html">Products</a>
+    <a href="about.html">About</a>
+    <a href="contact.html">Contact</a>
+  </nav>
 
-  <main class="section">
-    <h1>Checkout</h1>
-    <p class="muted">Enter your details. Then click “Email receipt”.</p>
+  <a class="cart-link" href="cart.html">
+    Cart (<span id="cartCount">0</span>)
+  </a>
+</header>
 
-    <div class="grid" style="grid-template-columns: 1fr 1fr;">
-      <div class="card">
-        <h3 style="margin-top:0;">Customer</h3>
-        <label>Name<br><input id="custName" style="width:100%; padding:10px; border-radius:10px;"></label><br><br>
-        <label>Email<br><input id="custEmail" type="email" style="width:100%; padding:10px; border-radius:10px;"></label><br><br>
-        <label>Address<br><input id="custAddr" style="width:100%; padding:10px; border-radius:10px;"></label>
-      </div>
-    <div class="summary">
-     <p>Subtotal: <span id="subtotal">$0.00</span></p>
-     <p>Tax: <span id="tax">$0.00</span></p>
-     <p>Delivery: <span id="delivery">$0.00</span></p>
-     <p><strong>Total: <span id="grandTotal">$0.00</span></strong></p>
-    </div>
+<main class="checkout-wrap">
+  <div class="checkout-grid">
 
-      <div class="card">
-        <h3 style="margin-top:0;">Order Summary</h3>
-        <div id="checkoutItems" class="muted"></div>
-        <hr class="divider">
-        <div><strong>Total:</strong> <span id="checkoutTotal">$0.00</span></div>
+    <!-- LEFT: form -->
+    <section class="checkout-card">
+      <h1>Checkout</h1>
+      <p class="muted">Fill details, then submit. You’ll get an Order ID confirmation.</p>
 
-        <div style="margin-top:14px; display:flex; gap:10px; flex-wrap:wrap;">
-          <button class="btn" id="emailBtn">Email receipt</button>
-          <button class="btn" onclick="clearCart(); location.href='products.html';">Clear & back</button>
+      <form id="checkoutForm">
+        <div class="row">
+          <div>
+            <label for="fullName">Full name</label>
+            <input id="fullName" name="fullName" required />
+          </div>
+          <div>
+            <label for="phone">Phone</label>
+            <input id="phone" name="phone" required />
+          </div>
         </div>
 
-        <p class="muted" style="margin-top:10px;">
-          This opens your email app using <code>mailto:</code>. No payment yet (demo).
-        </p>
-      </div>
-    </div>
-  </main>
+        <label for="email">Email</label>
+        <input id="email" name="email" type="email" required />
 
-  <script src="assets/js/products.js"></script>
-  <script src="assets/js/cart.js"></script>
-  <script src="assets/js/checkout-page.js"></script>
+        <label for="address">Delivery address</label>
+        <input id="address" name="address" required />
+
+        <div class="row">
+          <div>
+            <label for="city">City</label>
+            <input id="city" name="city" required />
+          </div>
+          <div>
+            <label for="zip">ZIP</label>
+            <input id="zip" name="zip" required />
+          </div>
+        </div>
+
+        <label for="deliveryWindow">Delivery window</label>
+        <select id="deliveryWindow" name="deliveryWindow" required>
+          <option value="Early morning (default)" selected>Early morning (default)</option>
+        </select>
+
+        <label for="notes">Notes (optional)</label>
+        <textarea id="notes" name="notes" placeholder="Any special instructions?"></textarea>
+
+        <div class="actions">
+          <button type="submit" class="btn">Submit Order</button>
+          <a class="btn" href="cart.html">Back to Cart</a>
+        </div>
+      </form>
+    </section>
+
+    <!-- RIGHT: summary -->
+    <aside class="checkout-card">
+      <h2>Order Summary</h2>
+
+      <div id="emptyState" class="muted" style="display:none;">
+        Your cart is empty.
+      </div>
+
+      <div id="summaryItems" class="items"></div>
+
+      <div id="summaryTotals" class="totals" style="display:none;">
+        <div><span>Subtotal</span><strong id="subtotal">$0.00</strong></div>
+        <div><span>Tax</span><strong id="tax">$0.00</strong></div>
+        <div><span>Delivery</span><strong id="delivery">$0.00</strong></div>
+        <div class="grand"><span>Total</span><strong id="total">$0.00</strong></div>
+      </div>
+    </aside>
+
+  </div>
+</main>
+
+<!-- Same script order pattern as cart.html -->
+<script src="assets/js/products.js"></script>
+<script src="assets/js/cart.js"></script>
+<script src="assets/js/checkout.js"></script>
+
 </body>
 </html>
