--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
   </div>
 
   <nav class="nav">
-    <a href="index.html">Home</a>
-    <a href="products.html">Products</a>
-    <a href="about.html">About</a>
-    <a href="contact.html">Contact</a>
+  <a href="index.html">Home</a>
+  <a href="products.html">Products</a>
+  <a href="index.html#about">About</a>
+  <a href="index.html#contact">Contact</a>
+
   </nav>
 
   <a class="cart-link" href="cart.html">Cart <span id="cartCount">0</span></a>
@@ -104,7 +105,7 @@
 
 <section id="contact" class="section">
   <h2>Contact</h2>
-  <p>Email: <a href="mailto:hello@bayshasta.com">hello@bayshasta.com</a></p>
+  <p>Email: <a href="mailto:bayshasta@gmail.com">bayshasta@gmail.com</a></p>
   <p>Instagram: <a href="https://instagram.com/" target="_blank">Coming soon</a></p>
 </section>
 
